2005-11-09  Francois Dumont  <dums@stlport...>

	* build/test/eh/gcc.mak: Fix build system for Cygwin/MinGW systems that
	was broken since library naming convention modification.

2005-11-07  Michael Fink  <vividos@users.sourceforge...>

	* build/lib/configure.bat: Fixed configuring for Visual Studio .NET 2003.
	Fixed jump target names for Win9x OSes: they must be 8 characters or
	shorter.

2005-11-07  Michael Fink  <vividos@users.sourceforge...>

	* build/Makefiles/nmake/evc3.mak, build/Makefiles/nmake/evc4.mak,
	build/lib/configure.bat, stlport/config/stl_evc.h: Added check if
	using x86 emulator configuration; using of proper include paths in
	case.

	* doc/README.evc4: Documentation update

2005-11-01  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* Repository: STLport 5.0.0, tag STLPORT_5_0_0

	* Repository: merge HEAD and STLPORT_5_0 branch.

	* build/Makefiles/gmake/app/rules-install.mak: install-shared rule
	added (patch by Michael Fink).

	* build/Makefiles/gmake/lib/rules-install-a.mak: install-static rule
	added (patch by Michael Fink).

2005-10-12  Francois Dumont  <dums@stlport...>

	* stlport/stl/_threads.h, _threads.c: Fix regression for some platforms
	introduce by modification of _Atomic_swap_ptr implementation thanks
	Albrecht Fritzche.

2005-10-09  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* repository: RC6, tag STLPORT_5_0_RC6

2005-10-09  Francois Dumont  <dums@stlport...>

	* stlport/config/stl_gcc.h: DEC alpha has not *l math functions

2005-10-08  Francois Dumont  <dums@stlport...>

	* stlport/stl/_config.h: Add endianess specification for DEC alpha thanks
	sourceforge compiler farm.

	* stlport/config/stl_intel.h: Remove reference to _STLP_GLOBAL_NEW_HANDLER
	in this file as this macro depends on native Standard library which is
	the back end MSVC compiler one so macro set in stl_msvc.h.

2005-10-07  Francois Dumont  <dums@stlport...>

	* build/Makefiles/gmake/darwin/sys.mak, freebsd/sys.mak: Fix EXT_TEST